--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 :root {
   --primary: #393e3e;
   --secondary: #145c72;
@@ -10,21 +10,22 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
-  /*by setting font size 1 rem = 10px */
-  /* default 1 rem = 16rem */
+  font-family: "Poppins", sans-serif;
 }
 body {
   font-size: 1.6rem;
 }
+
 .background {
   background-image: url(/books.jpg);
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
 }
+
 .container {
   width: 50%;
   display: flex;
@@ -32,12 +33,122 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  gap: 4rem;
 }
+
 .box {
-  height: 20rem;
+  height: 50rem;
   width: 80%;
   background-color: var(--primary);
   border: 0.5rem solid var(--secondary);
-  box-shadow: 0px 4px px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3.5rem;
+}
+
+.content {
+  color: var(--primary);
+  text-align: center;
+}
+.content h2 {
+  font-size: 6.4rem;
+  font-weight: 500;
+  line-height: 80%;
+}
+.content h1 {
+  font-size: 9.6rem;
+  font-weight: 600;
+  line-height: 90%;
+}
+.calculate-form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5rem;
+  padding: 5rem;
+  place-content: center;
+  place-items: center;
+}
+
+input {
+  height: 4.4rem;
+  padding: 0 2rem;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  border: white 1px solid;
+  color: white;
+  font-size: 1.6rem;
+  width: 100%;
+  max-width: 30rem;
+}
+input::placeholder {
+  color: white;
+  font-size: 1.6rem;
+}
+input:focus-visible {
+  outline: 2px solid var(--secondary);
+  border: 2px solid var(--secondary);
+}
+.calculate-form button {
+  grid-column: 1/3;
+}
+
+.primary-btn {
+  font-size: 2.4rem;
+  width: 16rem;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  background-color: var(--secondary);
+  color: white;
+  border: none;
+}
+.primary-btn:hover {
+  opacity: 0.9;
+}
+.primary-btn:active {
+  opacity: 1;
+  background-color: var(--secondary-light);
+}
+.result {
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+}
+@media (max-width: 1400px) {
+  .container {
+    width: 100%;
+  }
+  .box {
+    width: 70%;
+  }
+}
+@media (max-width: 786px) {
+  .container {
+    width: 100%;
+  }
+  .box {
+    width: 90%;
+    height: 54rem;
+  }
+  .calculate-form {
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+  .calculate-form button {
+    grid-column: 1/2;
+  }
+  .content h1 {
+    font-size: 5rem;
+  }
+  .content h2 {
+    font-size: 3.5rem;
+  }
+  input {
+    max-width: 100%;
+  }
+  .result {
+    font-size: 1.6rem;
+    padding: 2rem;
+  }
 }
